Fix: "Appears in" initial position (#200)
The container was not on-screen immediately when the metadata container
was too tall.

--- a/src/app/pages/detail-page/detail-page.component.scss
+++ b/src/app/pages/detail-page/detail-page.component.scss
@@ -20,7 +20,9 @@
 }
 
 #detail-content {
-  max-height: calc(100vh - 64px - 64px - 2rem - 4px);
+  --subtract-height: 0px;
+  max-height: calc(100vh - 64px - 64px - 2rem - 4px - var(--subtract-height));
+  transition: max-height 500ms easings.$easeInOutQuad;
   overflow-y: auto;
 
   flex-grow: 1;
@@ -73,11 +75,11 @@ div.related-content {
   height: 50vh;
   max-height: 90vh;
   z-index: 1;
+  box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.1);
 
   transition: height 300ms easings.$easeInOutQuad;
   &.expanded {
     height: 90vh;
-    box-shadow: 0px -2px 2px rgba(0, 0, 0, 0.25);
   }
 
   h3 {
